fix: Text remains visible during webfont load

--- a/style/fonts.css
+++ b/style/fonts.css
@@ -1,41 +1,47 @@
 @font-face {
-  font-family: "Airbnb Cereal App Book";
+  font-family: 'Airbnb Cereal App Book';
   font-style: normal;
   font-weight: normal;
-  src: local("Airbnb Cereal App Book"), url(../fonts/AirbnbCerealBook.woff) format("woff");
+  src: local('Airbnb Cereal App Book'), url(../fonts/AirbnbCerealBook.woff) format('woff');
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Airbnb Cereal App Light";
+  font-family: 'Airbnb Cereal App Light';
   font-style: normal;
   font-weight: normal;
-  src: local("Airbnb Cereal App Light"), url(../fonts/AirbnbCerealLight.woff) format("woff");
+  src: local('Airbnb Cereal App Light'), url(../fonts/AirbnbCerealLight.woff) format('woff');
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Airbnb Cereal App Medium";
+  font-family: 'Airbnb Cereal App Medium';
   font-style: normal;
   font-weight: normal;
-  src: local("Airbnb Cereal App Medium"), url(../fonts/AirbnbCerealMedium.woff) format("woff");
+  src: local('Airbnb Cereal App Medium'), url(../fonts/AirbnbCerealMedium.woff) format('woff');
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Airbnb Cereal App Bold";
+  font-family: 'Airbnb Cereal App Bold';
   font-style: normal;
   font-weight: normal;
-  src: local("Airbnb Cereal App Bold"), url(../fonts/AirbnbCerealBold.woff) format("woff");
+  src: local('Airbnb Cereal App Bold'), url(../fonts/AirbnbCerealBold.woff) format('woff');
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Airbnb Cereal App Extra Bold";
+  font-family: 'Airbnb Cereal App Extra Bold';
   font-style: normal;
   font-weight: normal;
-  src: local("Airbnb Cereal App Extra Bold"), url(../fonts/AirbnbCerealExtraBold.woff) format("woff");
+  src: local('Airbnb Cereal App Extra Bold'), url(../fonts/AirbnbCerealExtraBold.woff) format('woff');
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "Airbnb Cereal App Black";
+  font-family: 'Airbnb Cereal App Black';
   font-style: normal;
   font-weight: normal;
-  src: local("Airbnb Cereal App Black"), url(../fonts/AirbnbCerealBlack.woff) format("woff");
+  src: local('Airbnb Cereal App Black'), url(../fonts/AirbnbCerealBlack.woff) format('woff');
+  font-display: swap;
 }
